# shorts

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  go.mod  go.sum  logging.go  main.go  main_test.go  make_release.py
.github/workflows/: golangci-lint.yaml  publish-pypi.yaml  release.yaml  test.yaml
docs/superpowers/plans/: 2026-04-02-aiven-core-monorepo-support.md  2026-04-02-shorts-improvements.md  2026-04-03-content-addressable-cache.md  2026-04-04-pants-targets.md
docs/superpowers/specs/: 2026-04-04-pants-targets-design.md
src/: cache.rs  git.rs  graph.rs  imports.rs  lib.rs  main.rs  roots.rs  symbols.rs
testdata/simple/myapp/: models.py
tests/: cache_consistency.rs  cli.rs  integration.rs
tests/testdata/buildfiles/pkg_binary/: BUILD
tests/testdata/buildfiles/pkg_build_ext/: BUILD.pants
tests/testdata/buildfiles/pkg_distribution/: BUILD  dist.py
tests/testdata/buildfiles/pkg_library/: BUILD
tests/testdata/buildfiles/pkg_multiple/: BUILD
tests/testdata/buildfiles/pkg_resources/: BUILD
tests/testdata/buildfiles/pkg_sources/: BUILD
tests/testdata/buildfiles/pkg_tests/: BUILD
tests/testdata/crossroot/repo/py/metrics/src/avn/metrics/: collector.py
tests/testdata/namespace/src/avn/kafka/: consumer.py
tests/testdata/pantstargets/: BUILD  test_app.py
tests/testdata/simple/myapp/: views.py
tests/testdata/symbols/myapp/: base.py  uses_bar.py  uses_baz.py  uses_constant.py  uses_foo.py  uses_foo_indirect.py  uses_module.py  uses_star.py
