[package]
name = "shorts"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
rayon = "1"
log = "0.4"
env_logger = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustc-hash = "2"
bincode = "1"

# Ruff parser — git dependency pinned to a release tag
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }

[dev-dependencies]
tempfile = "3.27.0"
